--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
   "author": "Arthur Sarmento <arthurbs17@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "express": "^4.18.0",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.3"
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.6.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.13",
     "@types/node": "^17.0.29",
+    "@types/yup": "^0.29.13",
     "prisma": "^3.13.0"
   }
 }
