--- a/package.json
+++ b/package.json
@@ -6,18 +6,25 @@
   "author": "Arthur Sarmento <arthurbs17@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^3.13.0",
     "bcrypt": "^5.0.1",
     "express": "^4.18.0",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
+    "tsyringe": "^4.6.0",
     "typescript": "^4.6.3",
+    "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.29",
+    "@types/uuid": "^8.3.4",
     "@types/yup": "^0.29.13",
     "prisma": "^3.13.0"
+  },
+  "scripts": {
+    "dev": "tsnd --transpile-only --respawn --ignore-watch node_modules src/server.ts"
   }
 }
