--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@prisma/client": "^3.13.0",
     "bcrypt": "^5.0.1",
     "express": "^4.18.0",
+    "jsonwebtoken": "^8.5.1",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
     "tsyringe": "^4.6.0",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.29",
     "@types/uuid": "^8.3.4",
     "@types/yup": "^0.29.13",
