--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ POSTGRES_PASSWORD=
 POSTGRES_DB=
 
 DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:${DB_PORT}/${POSTGRES_DB}?schema=public"
+
+SECRET_KEY=
+EXPIRES_IN=
