--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@prisma/client": "^3.13.0",
     "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "jsonwebtoken": "^8.5.1",
     "ts-node": "^10.7.0",
