--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,9 @@ DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:${DB
 
 SECRET_KEY=
 EXPIRES_IN=
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_BUCKET=
+AWS_BUCKET_REGION=
+BASE_URL_BUCKET=
