--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^3.13.0",
+    "aws-sdk": "^2.1126.0",
     "bcrypt": "^5.0.1",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^3.0.0",
+    "multer": "^1.4.4",
+    "reflect-metadata": "^0.1.13",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
     "tsyringe": "^4.6.0",
@@ -22,6 +27,8 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/mime": "^2.0.3",
+    "@types/multer": "^1.4.7",
     "@types/node": "^17.0.29",
     "@types/uuid": "^8.3.4",
     "@types/yup": "^0.29.13",
