--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mime": "^3.0.0",
     "multer": "^1.4.4",
     "reflect-metadata": "^0.1.13",
+    "swagger-ui-express": "^4.3.0",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
     "tsyringe": "^4.6.0",
@@ -30,6 +31,7 @@
     "@types/mime": "^2.0.3",
     "@types/multer": "^1.4.7",
     "@types/node": "^17.0.29",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
     "@types/yup": "^0.29.13",
     "prisma": "^3.13.0"
