--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@prisma/client": "^3.13.0",
     "aws-sdk": "^2.1126.0",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mime": "^2.0.3",
